unpackaged/main/default/objects/CallDetail__c/CallDetail__c.object-meta.xml
<CustomObject>
    <label>CallDetail</label>
    <nameField>
        <label>CallDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CallDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>