unpackaged/main/default/objects/CallDetail__c/fields/CallComments__c.field-meta.xml
<CustomField>
    <fullName>CallComments__c</fullName>
    <description>Call Comments</description>
    <label>CallComments</label>
    <type>TextArea</type>
</CustomField>