unpackaged/main/default/objects/CallDetail__c/fields/CallEndTime__c.field-meta.xml
<CustomField>
    <fullName>CallEndTime__c</fullName>
    <description>CallEndTime</description>
    <label>CallEndTime</label>
    <type>DateTime</type>
</CustomField>