unpackaged/main/default/objects/CallDetail__c/fields/CallStartTime__c.field-meta.xml
<CustomField>
    <fullName>CallStartTime__c</fullName>
    <description>CallStartTime</description>
    <label>CallStartTime</label>
    <type>DateTime</type>
</CustomField>