unpackaged/main/default/objects/CallDetail__c/fields/NumberDialed__c.field-meta.xml
<CustomField>
    <fullName>NumberDialed__c</fullName>
    <description>Number dialed</description>
    <label>NumberDialed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>