unpackaged/main/default/objects/CallDetail__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number dialed from</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>